<resources>
    <string name="app_name">DC-World</string>
    <string name="string_network_error">网络连接失败</string>
    <string name="string_unknown_error">未知错误</string>
    <string name="string_network_unusable">网络不可用</string>
    <string name="string_network_timeout">请求网络超时</string>
    <string name="string_analysis_error">数据解析错误</string>
    <string name="string_server_error">服务器发生错误</string>
    <string name="string_request_address_error">请求地址不存在</string>
    <string name="string_server_turn_down">请求被服务器拒绝</string>
    <string name="string_request_redirect">请求被重定向到其他页面</string>
    <string name="string_request_message">数据获取失败</string>
    <string name="string_zxing_hint">将二维码放入框内，即可自动扫描</string>
    <string name="string_wallet_camera_error">打开相机失败</string>
    <string name="string_wallet_camera_setting">请在设置中打开相机权限</string>
    <string name="string_verson_erropromiss">请求外部存储权限失败</string>
    <string name="string_self_textcontent_settingpictrue">请在设置中打开外部存储权限</string>
    <string name="string_zxing_title">扫一扫</string>
    <string name="string_exit_app">再按一次退出程序</string>
    <string name="string_sweet_title">提示</string>
    <string name="string_sweet_verify">安全验证</string>
    <string name="string_sweet_cancle">取消</string>
    <string name="string_sweet_confirm">确认</string>
    <string name="to_wrap_activity">Wrap Activity</string>
    <string name="to_wrap_view">Wrap View</string>
    <string name="to_wrap_fragment">Wrap Fragment</string>
    <string name="to_load_success">加载成功</string>
    <string name="to_load_failed">加载失败</string>
    <string name="to_load_empty">数据为空</string>
    <string name="loading">加载中…</string>
    <string name="load_failed">加载失败，请点击重试</string>
    <string name="load_failed_no_network">网络失联了…\n请联网后点击重试</string>
    <string name="empty">暂无区块数据</string>
    <string name="to_single_view">为单个View显示状态</string>
    <string name="to_scroll_view">为多个View显示状态</string>
    <string name="to_grid_view_load">在GridView中使用</string>
    <string name="to_recycler_view_load">在RecyclerView中使用</string>
    <string name="to_special">特殊的Loading UI</string>
    <string name="wrap_single_view">加载状态仅显示在某个View的区域</string>
    <string name="string_tab_main">首页</string>
    <string name="string_tab_sift">星际云矿</string>
    <string name="string_tab_message">交易</string>
    <string name="string_tab_mine">我的</string>
    <string name="string_text_login1">安全易用，提供超值低风险挖矿增益服务，</string>
    <string name="string_text_login2">以及闪兑、红包等便捷功能。</string>
    <string name="string_text_login_btn1">创建身份</string>
    <string name="string_text_login_btn2">恢复身份</string>
    <string name="string_text_mine_Inactive">未激活</string>
    <string name="string_text_mine_Activated">已激活</string>
    <string name="string_text_mine_name">设置账号名称</string>
    <string name="string_mine_charge_money">收款</string>
    <string name="string_mine_mention_money">提币</string>
    <string name="string_mine_exchange">星际演替</string>
    <string name="string_mine_transfer">转账</string>
    <string name="string_mine_common1">我的资产</string>
    <string name="string_mine_common2">安全中心</string>
    <string name="string_mine_common3">社区</string>
    <string name="string_mine_common4">账本</string>
    <string name="string_mine_common5">邀请</string>
    <string name="string_mine_common6">系统</string>
    <string name="string_mine_common7">红包</string>
    <string name="string_mine_common8">留言</string>
    <string name="string_mine_user">账户信息</string>
    <string name="string_mine_user_phone">手机号码</string>
    <string name="string_mine_user_id">身份ID</string>
    <string name="string_mine_user_name">身份名</string>
    <string name="string_mine_user_edit_name">编辑昵称</string>
    <string name="string_mine_user_hint_name">昵称不超过10个字符</string>
    <string name="string_mine_user_null_name">昵称不能为空</string>
    <string name="string_mine_user_head">头像</string>
    <string name="string_home_tab1">资讯</string>
    <string name="string_home_tab2">博彩</string>
    <string name="string_home_tab3">游戏</string>
    <string name="string_home_tab4">直播</string>
    <string name="string_home_tab5">公链</string>
    <string name="string_home_tab6">社区</string>
    <string name="string_home_tab7">耀星财富</string>
    <string name="string_home_tab8">商城</string>
    <string name="string_registration_send_code">发送验证码</string>
    <string name="str_none" />
    <string name="String_user_agreement">用户协议</string>
    <string name="string_toolbar_createname">创建身份</string>
    <string name="string_toolbar_create_selecthelp">备份助记词</string>
    <string name="string_toolbar_select_true">确认备份</string>
    <string name="string_toolbar_selectsi">备份私钥</string>
    <string name="string_toolbar_createuser">创建身份</string>
    <string name="string_select_type">请选择备份方式！</string>
    <string name="string_tip_text_back">再按一次退出程序</string>
    <string name="string_tip_text_checkbox">我已阅读并同意此服务条款</string>
    <string name="string_user_agreement_text">请阅读并同意用户协议！</string>
    <string name="string_tip_text_select1">获取私钥等于拥有钱包资产所有权</string>
    <string name="string_tip_text_select2">● 私钥由英文单词组成，请抄写并妥善保管。</string>
    <string name="string_tip_text_select3">● 私钥丢失，无法找回，请务必备份助记词、私钥。</string>
    <string name="string_tip_text_select5">请选择备份</string>
    <string name="string_tip_text_select6">备份的私钥，可在APP的管理身份钱包的备份功能中查看</string>
    <string name="string_tip_text_select7">助记词用于恢复钱包，极其重要，将它抄写至纸上并存放在只有你知道的地方。</string>
    <string name="string_tip_text_select8">私钥用于恢复钱包或重置钱包密码，将它准确的抄写在纸上，并存放在只有你知道的安全的地方。</string>
    <string name="string_tip_text_select9">抄写下你的钱包私钥</string>
    <string name="string_tip_text_select10">你将会拥有身份下的多链钱包，比如USDT，DC，TRX</string>
    <string name="string_select_cb_zhujici">助记词备份</string>
    <string name="string_select_cb_siyue">私钥备份</string>
    <string name="string_select_btn">立即备份</string>
    <string name="string_next">下一步</string>
    <string name="string_finish">完成</string>
    <string name="string_user_name">身份名</string>
    <string name="string_user_password_dl">钱包密码(8-16数字与字母组合)</string>
    <string name="string_user_password_dl_ok">确认钱包密码</string>
    <string name="string_user_tishi">密码提示信息（可不填）</string>
    <string name="string_user_password_pay">支付密码(6位数字)</string>
    <string name="string_user_password_payok">确认支付密码</string>
    <string name="string_user_phone">手机号码</string>
    <string name="string_user_phone_code">验证码</string>
    <string name="hq">行情</string>
    <string name="string_create_btn">创建</string>
    <string name="string_text_china">中文</string>
    <string name="string_mine_exchange_rate">当前汇率：</string>
    <string name="string_edittext_exchange_rate_num">请输入兑换数量</string>
    <string name="string_usdt_yu">USDT余额</string>
    <string name="string_exchang_more">您单次最多可以兑换：</string>
    <string name="string_exchange_fee">手续费：</string>
    <string name="string_exchange_num">最低兑换数量：</string>
    <string name="string_mine_safe">实名认证</string>
    <string name="string_mine_safe_unfinish">未认证</string>
    <string name="string_change_password_dl">修改登录密码</string>
    <string name="string_change_password_pay">修改支付密码</string>
    <string name="string_safe_wallet">备份钱包</string>
    <string name="string_back_btn">退出登录</string>
    <string name="string_change_langage">切换语言</string>
    <string name="string_syatem_notice">系统公告</string>
    <string name="string_system_version">当前版本</string>
    <string name="string_all">全部</string>
    <string name="string_market">市场</string>
    <string name="string_bitype">币种</string>
    <string name="string_assets1">资产</string>
    <string name="string_usdt_new">最新价(USDT)</string>
    <string name="string_usdt_new1">最新价</string>
    <string name="string_down_up">涨跌幅</string>
    <string name="string_ges_yu">剩余(DC)</string>
    <string name="string_gespool">DC矿机</string>
    <string name="string_earning_list">收益列表</string>
    <string name="string_text_selsct_btn">我已抄写</string>
    <string name="string_text_">请按照顺序输入助记词，已确认您正确备份</string>
    <string name="string_asset_usdt">总账户资产折合（USDT）</string>
    <string name="string_tip_down_phone">手机号码不能为空！</string>
    <string name="string_tip_create_password">钱包密码不一致！</string>
    <string name="string_tip_create_passwordpay">支付密码不一致！</string>
    <string name="string_invite_tip_code">激活码不能为空!</string>
    <string name="string_tip_create_passwordneed">登录密码必须包含字母/数字最少8位！</string>
    <string name="string_tip_create_passwordpay_need">支付密码必须是6位纯数字！</string>
    <string name="string_tip_down_phonecode">验证码不能为空！</string>
    <string name="string_recover_help">助记词恢复</string>
    <string name="string_recover_si">私钥恢复</string>
    <string name="string_recover_phone">手机号恢复</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="string_text_copy">复制</string>
    <string name="string_invite_code">激活地址</string>
    <string name="string_text_invite_">激活下级扣 1 DC</string>
    <string name="string_text_invite_hint">请输入下级激活码</string>
    <string name="string_button_activate">激活</string>
    <string name="string_text_join">分享您的专属海报</string>
    <string name="string_text_copy_seccess">复制成功</string>
    <string name="string_dialog_invite">邀请好友</string>
    <string name="string_dialog_invite_code">长按识别二维码</string>
    <string name="string_dialog_invite_join">注册加入</string>
    <string name="string_dialog_invite_app">扫码下载APP</string>
    <string name="string_mine_team">我的团队</string>
    <string name="string_text_certification">您的信息会受到严格加密保护,且仅用于身份验证</string>
    <string name="string_language_cn">中文</string>
    <string name="string_language_en">English</string>
    <string name="string_language_system">跟随系统</string>
    <string name="string_et_zjc">请输入助记词，并用空格隔开</string>
    <string name="string_mnemonic_not_empty">助记词不能为空！</string>
    <string name="string_hint_sy">输入明文私钥或扫描二维码，请注意大小写</string>
    <string name="string_input_pwd">请输入密码，至少8位数</string>
    <string name="string_sy_not_empty">私钥不能为空！</string>
    <string name="string_mnemonic_verify_success">验证成功</string>
    <string name="string_mnemonic_verify_failed">验证失败</string>
    <string name="string_mnemonic_get_fail">助记词获取失败！</string>
    <string name="string_get_pri_fail">私钥获取失败！</string>
    <string name="string_tip_safe_certification">账户激活后才可以进行实名认证！</string>
    <string name="string_text_tobeactivate">待激活</string>
    <string name="string_text_activate">已激活</string>
    <string name="string_text_mine_activate">需让您的上级帮您激活！</string>
    <string name="string_text_mine_activate_tab1">账户激活后才可以进行充币！</string>
    <string name="string_text_mine_activate_tab2">账户激活后才可以进行提币！</string>
    <string name="string_text_mine_activate_tab3">账户激活后才可以进行兑换！</string>
    <string name="string_text_mine_activate_tab4">账户激活后才可以进行转账！</string>
    <string name="string_text_mine_null">功能暂未开放！</string>
    <string name="string_save_image">保存图片</string>
    <string name="plase_psd">请输入支付密码</string>
    <string name="playse_price_num">请输入提现金额</string>
    <string name="pay_pad">支付密码</string>
    <string name="sms_yanzheng">短信验证码</string>
    <string name="playse_sms_yanzheng">请输入短信验证码</string>
    <string name="withdraw">提现</string>
    <string name="withdraw_price">提现金额</string>
    <string name="string_moneyyue">余额:</string>
    <string name="string_login_wallet">导入钱包</string>
    <string name="string_create_wallet">创建钱包</string>
    <string name="string_shuru_num">请输入数量</string>
    <string name="string_putong_create">普通创建</string>
    <string name="string_create_leng">冷（离线）钱包创建</string>
    <string name="string_zhujici_daoru">助记词导入</string>
    <string name="string_siyao_daoru">私钥导入</string>
    <string name="string_look_daoru">观察钱包导入</string>
    <string name="string_daoru_leng">冷（离线）钱包导入</string>
    <string name="string_jiedong_type">选择解冻类型</string>
    <string name="string_kuandai">宽带</string>
    <string name="string_nengliang">能量</string>
    <string name="string_ziyuan_jieshou">资源接收方</string>
    <string name="string_oneself">自己</string>
    <string name="string_herself">他人</string>
</resources>