<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_topic"
    android:gravity="center_horizontal"
    tools:context=".activity.AddWalletActivity">
    <include layout="@layout/include_title"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="@string/string_create_wallet"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"/>
    <TextView
        android:id="@+id/add_wallet_tab1"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        android:background="@mipmap/new_bg_item"
        android:drawableRight="@mipmap/new_icon_right"
        android:drawableLeft="@mipmap/new_icon_addwallet1"
        android:drawablePadding="14dp"
        android:gravity="center_vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/string_putong_create"
        android:textColor="@color/font_color_text"
        android:textSize="@dimen/sp_14" />
    <TextView
        android:id="@+id/add_wallet_tab2"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="0dp"
        android:background="@mipmap/new_bg_item"
        android:drawableRight="@mipmap/new_icon_right"
        android:drawableLeft="@mipmap/new_icon_addwallet2"
        android:drawablePadding="14dp"
        android:gravity="center_vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/string_create_leng"
        android:textColor="@color/font_color_text"
        android:textSize="@dimen/sp_14"
        android:visibility="gone"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="@string/string_login_wallet"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"/>
    <TextView
        android:id="@+id/add_wallet_tab3"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        android:background="@mipmap/new_bg_item"
        android:drawableRight="@mipmap/new_icon_right"
        android:drawableLeft="@mipmap/new_icon_addwallet3"
        android:drawablePadding="14dp"
        android:gravity="center_vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/string_zhujici_daoru"
        android:textColor="@color/font_color_text"
        android:textSize="@dimen/sp_14" />
    <TextView
        android:id="@+id/add_wallet_tab4"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="0dp"
        android:background="@mipmap/new_bg_item"
        android:drawableRight="@mipmap/new_icon_right"
        android:drawableLeft="@mipmap/new_icon_addwallet4"
        android:drawablePadding="14dp"
        android:gravity="center_vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/string_siyao_daoru"
        android:textColor="@color/font_color_text"
        android:textSize="@dimen/sp_14" />
    <TextView
        android:id="@+id/add_wallet_tab5"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="0dp"
        android:background="@mipmap/new_bg_item"
        android:drawableRight="@mipmap/new_icon_right"
        android:drawableLeft="@mipmap/new_icon_addwallet5"
        android:drawablePadding="14dp"
        android:gravity="center_vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/string_look_daoru"
        android:textColor="@color/font_color_text"
        android:textSize="@dimen/sp_14" />

    <TextView
        android:id="@+id/add_wallet_tab6"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="0dp"
        android:background="@mipmap/new_bg_item"
        android:drawableRight="@mipmap/new_icon_right"
        android:drawableLeft="@mipmap/new_icon_addwallet2"
        android:drawablePadding="14dp"
        android:gravity="center_vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/string_daoru_leng"
        android:textColor="@color/font_color_text"
        android:textSize="@dimen/sp_14" />
</LinearLayout>