<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_topic"
    android:orientation="vertical">

    <include layout="@layout/include_title" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsv_mine"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/string_tip_text_select1"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_14" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:background="@color/dark"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string_tip_text_select2"
                    android:textColor="@color/font_color_text"
                    android:textSize="@dimen/sp_14"

                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:text="@string/string_tip_text_select3"
                    android:textColor="@color/font_color_text"
                    android:textSize="@dimen/sp_14" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="20dp"
                android:text="@string/string_tip_text_select5"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_14" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/string_tip_text_select6"
                android:textColor="@color/hint_color_text"
                android:textSize="@dimen/sp_14" />
            <RadioGroup
                android:id="@+id/rg"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_height="50dp"
                android:layout_width="match_parent">
                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:checked="false"
                    android:text="@string/string_select_cb_zhujici"
                    android:visibility="gone"
                    android:textColor="@color/font_color_text"
                    android:textSize="14sp"/>
                <RadioButton
                    android:id="@+id/femle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:checked="true"
                    android:text="@string/string_select_cb_siyue"
                    android:textColor="@color/font_color_text"
                    android:textSize="14sp"/>
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="20dp"
                android:background="@mipmap/new_button_exitview"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <com.jkkg.hhtx.widget.ClearEditText
                    android:id="@+id/select_dc_psw"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/string_input_pwd"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:singleLine="true"
                    android:textColor="@color/font_color_text"
                    android:textColorHint="@color/hint_color_text"
                    android:textSize="@dimen/sp_14" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="@mipmap/new_bg_button"
                android:text="@string/string_select_btn"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_14" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>